2009-02-27  Adam Schreiber  <sadam@clemson.edu>

    * libseahorse/seahorse-widget.c: Fix reference counting so destroyed
    widgets are indeed destroyed.

2009-02-25  Adam Schreiber  <sadam@clemson.edu>

    * libseahorse/seahorse-context.c:
    * libseahorse/seahorse-object-widget.c:
    * libseahorse/seahorse-widget.c: Remove more deprecated symbols.
    Patch from Thomas Anderson.  Fixes bug #572181

2009-02-17  Adam Schreiber  <sadam@clemson.edu>

    * libseahorse/seahorse-widget.c: Remove deprecated GTK+ symbols
    Fixes bug #572181

2009-02-17  Adam Schreiber  <sadam@clemson.edu>

    * src/seahorse-keyserver-search.c:
    * gkr/seahorse-gkr-item-properties.c:
    * libseahorse/seahorse-object-widget.h: Remove deprecated GTK+ symbols
    Fixes bug #572181

2009-02-17  Gabor Kelemen  <kelemeng@gnome.hu>

	* src/seahorse-keyserver-results.c:
	* src/seahorse-key-manager.c:
	* src/seahorse-viewer.c: Get rid of some reused stock item names, 
	fall back to default. Fixes bug #572140.

2009-02-16  Adam Schrieber  <sadam@clemson.edu>

    * libseahorse/seahorse-object.c: Change context to comment. 
    Fixes bug #571808

    * libseahorse/seahorse-object.c: Add context to string.  Fixes bug #571808

2009-02-16  Gabor Kelemen  <kelemeng@gnome.hu>

	* gkr/seahorse-gkr-keyring.c: Mark two strings for translation. Fixes bug #571991

2009-02-14  Adam Schreiber  <sadam@clemson.edu>

    * pkcs11/seahorse-pkcs11-commands.c: Add missing comma

2009-02-14  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	reviewed by: Stef Walter <stef@memberwebs.com>

	* pkcs11/seahorse-pkcs11-commands.c:
	(seahorse_pkcs11_commands_delete_objects):

	Use ngettext() where appropriate. Fixes bug #571778.

2009-02-14  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* src/seahorse-viewer.c: (on_copy_complete):
	Add translator comments.

2009-02-14  Stef Walter  <stef@memberwebs.com>

	* pgp/seahorse-pgp-generate.glade: Collapse key generate 
	'Advanced Options' by default.
