@@ -1,5 +1,7 @@
 2009-02-27  Adam Schreiber  <sadam@clemson.edu>
 
+    * libcryptui/cryptui.c: gtk-doc documentation
+
     * libseahorse/seahorse-widget.c: Fix reference counting so destroyed
     widgets are indeed destroyed.
 
